# ryu

./: .gitignore  README.md  bench.html  ryu.cabal  stack.yaml
perf/: Main.hs
src/Text/Format/Floating/: Constants.hs  Decimal.hs  Hex.hs  IEEE.hs  Rounding.hs  Ryu.hs  Simple.hs
src/Text/Format/Floating/Ryu/: Debug.hs  TableQuoter.hs  Tables.hs
src/Text/Format/Floating/Ryu/Tables/: Formulas.hs  TH.hs
test/Text/Format/Floating/: RyuSpec.hs  SimpleSpec.hs
